[localserver] add messages sort param
